# gitair

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
docs/: companion-spike-brief.md  companion-spike-phase0-run-sheet.md  companion-spike-phase1-run-sheet.md  interface-aesthetics.md  milestones.md  project-idea.md  research-modules.md  session-core.md
docs/adr/: 0001-small-event-driven-python-core.md  0002-use-musician-facing-companion-actions.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
experiments/companion_spike/phase0/: README.md  mrt2_note_conditioning.py  mrt2_notes_conditioned_smoke.py
experiments/companion_spike/phase1/: README.md  (+1 more)
gitair/companions/: fake.py
gitair/core/: __init__.py  companion_state.py  control_action.py  errors.py  phrase_context.py  session.py  session_snapshot.py
gitair/demos/: dry_run_session.py  gesture_dry_run.py  priming_source_dry_run.py  webcam_audio_priming_dry_run.py  webcam_gesture_dry_run.py  webcam_priming_dry_run.py
gitair/gestures/: __init__.py  event.py  fake.py  head_turn.py  mapper.py  mediapipe_face.py
gitair/priming/: __init__.py  audio.py  audio_buffer.py  manual.py  source.py
tests/: test_audio_priming_source.py  test_cycle_loop_bench.py  test_gesture_boundary.py  test_head_turn_source.py  test_mediapipe_face_source.py  test_priming_source.py  test_session_core.py  test_webcam_audio_priming_dry_run.py  test_webcam_priming_dry_run.py
tests/fixtures/: gitair_canonical_loop_1.expected.json  gitair_canonical_loop_1.musicxml
